# pod

./: .gitignore  Cargo.toml  Readme.md  license
.github/workflows/: release.yml  rust.yml
src/: config.rs  image.rs  main.rs
src/modifiers/: metadata_modifier.rs  mod.rs  size_modifier.rs
src/picture_io/: mod.rs  picture_bing_provider.rs  picture_nasa_provider.rs
