[package]
name = "wallpapier"
version = "0.1.0"
edition = "2021"
authors = ["nevarman"]
description = "A rust cli tool for setting picture of the day"
license = "MIT"
repository = "https://github.com/yourusername/wallpapier"

[dependencies]
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
wallpaper = { version = "3"}
